<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_add_new_expose"
            android:icon="@drawable/ic_add_white_24dp"
            android:title="@string/add_expose" />
        <item
            android:id="@+id/nav_all_expose"
            android:icon="@drawable/ic_list_white_24dp"
            android:title="@string/show_all_expose_title" />
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_person_white_24dp"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_lock_white_24dp"
            android:title="@string/logout" />
    </group>



</menu>
