<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_new"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Here you can put your logo or brand name -->

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/manu_text"
                android:textSize="30sp" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/login_text"
                android:textAlignment="center"
                android:textColor="@color/manu_text" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email_input_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_person_white_24dp"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:selectAllOnFocus="false"
                    android:textColorHint="#fff" />

            </android.support.design.widget.TextInputLayout>



            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_input_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_lock_white_24dp"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="#fff" />

            </android.support.design.widget.TextInputLayout>





            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <Button
                android:id="@+id/loginBTN"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/background_login"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <Button
                android:id="@+id/registerBTN"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/background_signup"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/forgetPassword"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/password_forgotten"
                android:textColor="#fff" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="20dp"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>