<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/background_nav_header"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="95dp"
        app:srcCompat="@android:drawable/ic_menu_save" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageDialog"
        android:layout_margin="16dp"
        android:text="@string/save_new_expose_dialog_text"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/cancel_save_new_expose_BTN"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="cancel_save_new_expose"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:layout_weight="1"
            android:background="@drawable/background_signup"/>

        <Button
            android:id="@+id/publish_new_expose_BTN"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="publish_expose"
            android:text="@string/publish"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:layout_weight="1"
            android:background="@drawable/background_signup"/>

    </LinearLayout>


</LinearLayout>





